# fastapi-logging-manager

./: MANIFEST.in  README.md  __init__.py  pyproject.toml
fastapi_logger_manager/: logger_manager.py
fastapi_logging_manager/: __init__.py  log_view_router.py  logger_manager.py
fastapi_logging_manager/templates/: README.md  __init__.py  log_viewer.html
tests/: test_basic.py
